Platform and news testing plus README update

--- a/templates/news/wall.html
+++ b/templates/news/wall.html
@@ -1,15 +1,16 @@
 <html>
   <head>
-    <link href="/platform/css/common/" rel="stylesheet" 
+    <link href="/static/css/common.css" rel="stylesheet" 
           type="text/css" media="screen" />
-    <link href="/platform/css/news/" rel="stylesheet" 
+    <link href="/static/css/news.css" rel="stylesheet" 
           type="text/css" media="screen" />
-    <link type="text/css" href="/platform/css/jquery-ui-black-tie/" 
+    <link type="text/css" href="/static/css/jquery-ui-black-tie.css" 
           rel="Stylesheet" />          
-    <script type="text/javascript" src="/platform/js/jquery/"></script>
-    <script type="text/javascript" src="/static/steal/steal.js?news"></script>
-    <script type="text/javascript" src="/platform/js/jqueryui/"></script>
-    <script type="text/javascript" src="/platform/js/date/"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/steal/steal.js?news">
+    </script>
+    <script type="text/javascript" src="/static/js/jqueryui.js"></script>
+    <script type="text/javascript" src="/static/js/date.js"></script>
     <title>Gelnior's newebe</title>
 
   </head>
