Adding contacts Resource and models:

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/static/js/underscore.js"></script>
     <script type="text/javascript" src="/static/js/backbone.js"></script>
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>Newebe | {% block title %}{% endblock %}</title>
   </head>
 
   <body>    
