--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -5,4 +5,7 @@
   <span>
     <a id="profile-a" href="/platform/profile/">Profile</a>
   </span>  
+  <span>
+      <a id="contact-a" href="/platform/contact/">Contacts</a>
+  </span>  
 </div>
