--- a/templates/platform/contact_content.html
+++ b/templates/platform/contact_content.html
@@ -1,3 +1,17 @@
 <div id="contact">
-  Contacts !!
+
+  <!-- Contact form to add contact -->
+  <form id="contact-form">
+      <input type="text" id="contact-url-field"/></input>
+      <input type="submit" id="contact-post-button" value="Add"/></input>
+  </form>
+
+  <!-- Contact list -->
+  <div id="contacts">
+  </div>
+
+  <script type="text/javascript" 
+          src="/static/js/contacts/lib/contacts.js">
+  </script>
+
 </div>
