--- a/templates/platform/contact_content.html
+++ b/templates/platform/contact_content.html
@@ -5,13 +5,16 @@
       <input type="text" id="contact-url-field"/></input>
       <input type="submit" id="contact-post-button" value="Add"/></input>
   </form>
-
+  <div id="toolbar">
+    <a id="contact-all-button" href="">All</a>   
+    <a id="contact-pending-button" href="">Pending</a>   
+    <a id="contact-request-button" href="">Request</a>   
+  </div>
   <!-- Contact list -->
   <div id="contacts">
   </div>
-
-  <script type="text/javascript" 
-          src="/static/js/contacts/lib/contacts.js">
-  </script>
-
 </div>
+<script type="text/javascript" 
+        src="/static/js/contacts/lib/contacts.js">
+</script>
+
