--- a/templates/news/news_content.html
+++ b/templates/news/news_content.html
@@ -14,7 +14,7 @@
            <a id="news-my-button" href="#">mine</a>
            <a id="news-all-button" href="#">theirs</a>
            <span>
-             since <input id="news-from-datepicker" type="text"></input>
+             until <input id="news-from-datepicker" type="text"></input> 
            </span>
          </div>
          <div class="spacer"></div>
