--- a/static/css/news.css
+++ b/static/css/news.css
@@ -6,10 +6,11 @@ input.post-button  { float : right; font-size : 18px; margin-left: 3px;}
 textarea.news-area { width : 958px; font-size : 18px; padding: 5px; }
 
 /** News object styling */
-div.news-newss { margin-top: 40px; margin-left: 2px; }
+div.news-newss { margin-top: 20px; margin-left: 2px; }
 div.news-micropost-row { padding-bottom : 20px; }
 p.news-micropost-content { padding-bottom : 5px; }
 p.news-micropost-content span { font-weight : bold; }
 p.news-micropost-date { font-size : 10px; color #AAA; }
 a.news-micropost-delete { float : right; }
 
+#news-toolbar { padding : 20px 10px 0px 0px; }
