--- a/templates/news/news_content.html
+++ b/templates/news/news_content.html
@@ -11,8 +11,8 @@
 
          <!-- Tool bar -->
          <div id="news-toolbar">
-           <a id="news-my-button" href="#">mine</a>
-           <a id="news-all-button" href="#">theirs</a>
+           <!--a id="news-my-button" href="#">mine</a>
+           <a id="news-all-button" href="#">theirs</a-->
            <span>
              until <input id="news-from-datepicker" type="text"></input> 
            </span>
