--- a/templates/base_menu.html
+++ b/templates/base_menu.html
@@ -4,5 +4,6 @@
 {% include "base_menu_content.html" %}
 <div id="apps">
   {% block content %}{% endblock %}
+  <div id="tutorial"></div>
 </div>
 {% endblock body %}
