Tutorial for profile page

--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -1,11 +1,11 @@
 <div id="menu">
   <span>
-    <a id="news-a"href="/news/wall/">News</a>
+    <a id="news-a"href="/news/">News</a>
   </span>  
   <span>
-    <a id="profile-a" href="/platform/profile/">Profile</a>
+    <a id="profile-a" href="/profile/">Profile</a>
   </span>  
   <span>
-      <a id="contact-a" href="/platform/contact/">Contacts</a>
+      <a id="contact-a" href="/contact/">Contacts</a>
   </span>  
 </div>
