--- a/templates/news/tutorial_2.html
+++ b/templates/news/tutorial_2.html
@@ -1,13 +1,13 @@
 <h3 class="tutorial-text">Tutorial</h3>
 <p class="tutorial-text">
-Congratulations, you post your first micro post ! 
+Congratulations, you posted your first micro post ! 
 </p>
 <p class="tutorial-text">
 Now you can decide to display
 only posts from your contacts by clicking on "theirs" button, only your posts
-by clicking on "mine" button and you can display posts until a givent date
+by clicking on "mine" button and you can display posts until a given date
 by setting a date in the until field.
 </p>
 <p class="tutorial-text">
-And now Enjoy !
+And now Enjoy Sharing !
 </p>    
