--- a/templates/core/profile/profile_content.html
+++ b/templates/core/profile/profile_content.html
@@ -2,6 +2,7 @@
   <p><input type="text" id="platform-profile-name" /></p>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
   <p>City: <input type="text" id="platform-profile-city" /></p>
+  <div id="tutorial-profile"></div>
 </div>
 <script type="text/javascript" 
         src="/static/js/profile/lib/profile.js">
