--- a/templates/news/news_content.html
+++ b/templates/news/news_content.html
@@ -27,6 +27,7 @@
          <!-- End news Listing -->
 
          <a id="news-more">more...</a>
+         <div id="tutorial-news"></div>
       </div>
       <script type="text/javascript" 
               src="/static/js/news/lib/news.js ">
