--- a/templates/news/tutorial_2.html
+++ b/templates/news/tutorial_2.html
@@ -9,5 +9,5 @@ by clicking on "mine" button and you can display posts until a given date
 by setting a date in the until field.
 </p>
 <p class="tutorial-text">
-And now Enjoy Sharing !
+Enjoy Sharing !
 </p>    
