--- a/templates/core/contact/contact_content.html
+++ b/templates/core/contact/contact_content.html
@@ -13,6 +13,7 @@
   <!-- Contact list -->
   <div id="contacts">
   </div>
+  <div id="tutorial-contact"></div>
 </div>
 <script type="text/javascript" 
         src="/static/js/contacts/lib/contacts.js">
