--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="/static/js/json2.js"></script>
     <script type="text/javascript" src="/static/js/underscore.js"></script>
     <script type="text/javascript" src="/static/js/backbone.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.evented_ajax.js">
+    </script>
 
     <title>Newebe | {% block title %}{% endblock %}</title>
   </head>
