Porting template services to tornado

--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -1,11 +1,15 @@
 <div id="menu">
   <span>
     <a id="news-a"href="/news/">News</a>
-  </span>  
+  </span>
   <span>
     <a id="profile-a" href="/profile/">Profile</a>
-  </span>  
+</span>
   <span>
       <a id="contact-a" href="/contact/">Contacts</a>
-  </span>  
+  </span>
+  <span>
+      <a id="activities-a" href="/activities/">Activities</a>
+  </span> 
+
 </div>
