Porting of all services to Tornado

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,11 @@
     <script type="text/javascript" src="/static/js/backbone.js"></script>
     <script type="text/javascript" src="/static/js/showdown.js"></script>
 
-    <title>Newebe | {% block title %}{% endblock %}</title>
+    <title>Newebe | {% block title %}{% end %}</title>
   </head>
 
   <body>    
-    {% block body %}{% endblock %}
+    {% block body %}{% end %}
   </body>
   <script type="text/javascript" src="/static/js/platform/lib/platform.js">
   </script>
