--- a/templates/base_menu.html
+++ b/templates/base_menu.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "../templates/base.html" %}
 
 {% block body %}
-{% include "base_menu_content.html" %}
+{% include "../templates/base_menu_content.html" %}
 <div id="apps">
-  {% block content %}{% endblock %}
+  {% block content %}{% end %}
 </div>
-{% endblock body %}
+{% end body %}
