--- a/templates/core/contact/contact.html
+++ b/templates/core/contact/contact.html
@@ -1,10 +1,10 @@
-{% extends "base_menu.html" %}
+{% extends "../templates/base_menu.html" %}
 
 {% block title %}
 Contacts
-{% endblock %}
+{% end %}
 
 {% block content %}
-  {% include "core/contact/contact_content.html" %}
-{% endblock %}
+  {% include "../templates/core/contact/contact_content.html" %}
+{% end %}
 
