--- a/templates/core/profile/profile.html
+++ b/templates/core/profile/profile.html
@@ -1,6 +1,6 @@
-{% extends "base_menu.html" %}
+{% extends "../templates/base_menu.html" %}
 
 {% block content %}
-  {% include "core/profile/profile_content.html" %}
-{% endblock %}
+  {% include "../templates/core/profile/profile_content.html" %}
+{% end %}
 
