--- a/templates/core/profile/profile_menu_content.html
+++ b/templates/core/profile/profile_menu_content.html
@@ -1,5 +1,5 @@
-{% include "base_menu_content.html" %}
+{% include "../templates/core/base_menu_content.html" %}
 
 <div id="apps">
-    {% include "core/profile/profile_content.html" %}
+    {% include "../templates/core/profile/profile_content.html" %}
 </div>
