--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,8 +1,8 @@
-{% extends "base_menu.html" %}
+{% extends "../templates/base_menu.html" %}
 
-{% block title %}News{% endblock %}
+{% block title %}News{% end %}
 
 {% block content %}
-  {% include "news/news_content.html" %}
-{% endblock %}
+  {% include "../templates/news/news_content.html" %}
+{% end %}
 
