--- a/static/css/news.css
+++ b/static/css/news.css
@@ -1,23 +1,48 @@
-/** News app themes */
-
-
-/** News form */
-
-input.button { font-weight : bold; }
-input.post-button  { float : right; font-size : 18px; margin-left: 3px;}
-textarea.news-area { width : 958px; font-size : 18px; padding: 5px; }
-
-
-/** News object styling */
-
-div.news-newss { margin-top: 20px; margin-left: 2px; }
-div.news-micropost-row { padding-bottom : 20px; }
-p.news-micropost-content { padding-bottom : 5px; }
-p.news-micropost-content span { font-weight : bold; }
-p.news-micropost-date { font-size : 10px; color #AAA; }
-a.news-micropost-delete { float : right; margin-left: 10px; }
-span.news-micropost-author { float : left; margin-right: 5px; 
-                             font-weight: bold; }
-div.news-micropost-row p { margin-bottom: 6px; }
-
-#news-toolbar { padding : 20px 10px 0px 0px; }
+input.button {
+  font-weight: bold;
+}
+input.post-button {
+  float: right;
+  font-size: 18px;
+  margin-left: 3px;
+}
+textarea.news-area {
+  width: 100%;
+  font-size: 18px;
+  padding: 5px;
+}
+div.news-newss {
+  margin-top: 20px;
+  margin-left: 2px;
+}
+div.news-micropost-row {
+  padding-bottom: 20px;
+}
+p.news-micropost-content {
+  padding-bottom: 5px;
+}
+p.news-micropost-content span {
+  font-weight: bold;
+}
+p.news-micropost-date {
+  font-size: 10px;
+}
+a.news-micropost-delete {
+  float: right;
+  margin-left: 10px;
+}
+a.news-micropost-author {
+  float: left;
+  margin-right: 5px;
+  font-weight: bold;
+  color: #000;
+}
+a:visited.news-micropost-author {
+  color: #000;
+}
+div.news-micropost-row p {
+  margin-bottom: 6px;
+}
+#news-toolbar {
+  padding: 20px 10px 0px 0px;
+}
