--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
           type="text/css" media="screen" />
     <link href="/static/css/news.css" rel="stylesheet" 
           type="text/css" media="screen" />
+    <link href="/static/activities/styles/activities.css" rel="stylesheet" 
+          type="text/css" media="screen" />
     <link type="text/css" href="/static/css/jquery-ui-black-tie.css" 
           rel="Stylesheet" />          
 
