--- a/templates/core/profile/profile_content.html
+++ b/templates/core/profile/profile_content.html
@@ -1,7 +1,8 @@
 <div id="profile">
   <p><input type="text" id="platform-profile-name" /></p>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
-  <p>Description: <input type="text" id="platform-profile-city" /></p>
+  <p>Description:</p>
+  <p><textarea id="profile-description" /></p>
   <div id="tutorial-profile"></div>
 </div>
 <script type="text/javascript" 
