--- a/templates/news/news_content.html
+++ b/templates/news/news_content.html
@@ -1,5 +1,6 @@
-       <div id="news">
-            
+
+         <div id="news">
+         <div class="app">   
          <!-- Posting form -->
          <form id="news-form" action="/news/wall/" method="post">
              <textarea class="news-area" 
@@ -29,7 +30,9 @@
          <a id="news-more">more...</a>
          <div id="tutorial-news"></div>
       </div>
+      <div id="news-preview" class="preview"> </div>
+      </div>
       <script type="text/javascript" 
               src="/static/js/news/lib/news.js ">
       </script>
-
+ 
