--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link href="/static/css/common.css" rel="stylesheet" 
+    <link href="/static/platform/styles/common.css" rel="stylesheet" 
           type="text/css" media="screen" />
-    <link href="/static/css/news.css" rel="stylesheet" 
+    <link href="/static/platform/styles/news.css" rel="stylesheet" 
           type="text/css" media="screen" />
     <link href="/static/activities/styles/activities.css" rel="stylesheet" 
           type="text/css" media="screen" />
@@ -23,7 +23,7 @@
   <body>    
     {% block body %}{% end %}
   </body>
-  <script type="text/javascript" src="/static/js/platform/lib/platform.js">
+  <script type="text/javascript" src="/static/platform/lib/platform.js">
   </script>
 </html>
 
