--- a/templates/news/news_content.html
+++ b/templates/news/news_content.html
@@ -33,6 +33,6 @@
       <div id="news-preview" class="preview"> </div>
       </div>
       <script type="text/javascript" 
-              src="/static/js/news/lib/news.js ">
+              src="/static/news/lib/news.js ">
       </script>
  
