--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -12,4 +12,7 @@
       <a id="activities-a" href="/activities/">Activities</a>
   </span> 
 
+  <span>
+      <a id="logout-a" href="/logout/">Logout</a>
+  </span>
 </div>
