--- a/templates/core/contact/contact_render.html
+++ b/templates/core/contact/contact_render.html
@@ -1,3 +1,5 @@
-<h1>{{ contact.name }}</h1>
-<p>{{ contact.url }}</p>
-<p>{{ contact.description }}</p>
+<div class="profile-display">
+<h1  class="profile-name">{{ contact.name }}</h1>
+<p class="profile-url">{{ contact.url }}</p>
+<p class="profile-description">{{ contact.description }}</p>
+</div>
