--- a/templates/core/profile/profile_content.html
+++ b/templates/core/profile/profile_content.html
@@ -1,9 +1,16 @@
 <div id="profile">
+    
+  <div class="app">
   <p><input type="text" id="platform-profile-name" /></p>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
   <p>Description:</p>
   <p><textarea id="profile-description" /></p>
   <div id="tutorial-profile"></div>
+  </div>
+  <div id="profile-preview" class="preview">
+      This is how your contacts see your profile:
+      <div id="profile-render"></div>
+  </div>
 </div>
 <script type="text/javascript" 
         src="/static/profile/lib/profile.js">
