--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -1,3 +1,5 @@
+/** Reset */
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
   margin: 0
   padding: 0
@@ -40,6 +42,9 @@ a
 a:hover
   text-decoration: underline
 
+
+/* General */
+
 body
   font-family: sans-serif
   margin: 10px 0 0 10px
@@ -81,6 +86,9 @@ input
 textarea
   border: 1px solid black
 
+
+/* Menu */
+
 #menu
   margin: 10px 0 10px 0
 
@@ -118,6 +126,9 @@ h2
 h3
   font-weight: bold
   margin-bottom: 6px
+
+
+/* Tools */
 
 .dialog
   background-color: black
@@ -167,12 +178,20 @@ h3
   font-size: 60px
   text-align: center
 
+#platform-password-text-field
+#login-password-text-field
+  border: none
+  font-weight: bold
+  font-size: 60px
+  text-align: center
+
+
 #profile
   margin-top: 30px
+  font-size: 18px
 
 #profile p
   margin-bottom: 20px
-  font-size: 18px
 
 #profile input#platform-profile-name
   font-size: 56px
@@ -191,6 +210,23 @@ h3
   font-size: 18px
   border: none
   padding: 0 0 6px 0
+
+#profile-render
+  margin-top: 20px
+
+.profile-name
+  font-size 32px
+  text-decoration: none
+
+.profile-url 
+  font-size: 10px
+  font-style:italic
+
+.profile-description 
+  margin-top: 10px;
+
+#logout-a
+  float: right
 
 .modified
   background: #ffffff url('/static/images/modification_marker.png') no-repeat right top
