--- a/templates/core/contact/contact_content.html
+++ b/templates/core/contact/contact_content.html
@@ -1,5 +1,6 @@
 <div id="contact">
 
+  <div class="app">        
   <!-- Contact form to add contact -->
   <form id="contact-form">
       <input type="text" id="contact-url-field"/></input>
@@ -14,6 +15,8 @@
   <div id="contacts">
   </div>
   <div id="tutorial-contact"></div>
+  </div>
+  <div id="news-preview" class="preview"> </div>
 </div>
 <script type="text/javascript" 
         src="/static/contacts/lib/contacts.js">
