--- a/templates/core/register.html
+++ b/templates/core/register.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "../templates/base.html" %}
 
 {% block title %}
 Register
-{% endblock title %}
+{% end title %}
 
 {% block body %}
 <div id="register">
@@ -13,4 +13,5 @@ Register
     <input id="platform-user-text-field"></input>
   </p>
 </div>
-{% endblock body %}
+{% end body %}
+
