Sets up HTTPS for newebe server

--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -1,18 +1,18 @@
 <div id="menu">
   <span>
-    <a id="news-a"href="/news/">News</a>
+    <a id="news-a"href="/news/">news</a>
   </span>
   <span>
-    <a id="profile-a" href="/profile/">Profile</a>
+    <a id="profile-a" href="/profile/">profile</a>
 </span>
   <span>
-      <a id="contact-a" href="/contact/">Contacts</a>
+      <a id="contact-a" href="/contact/">contacts</a>
   </span>
   <span>
-      <a id="activities-a" href="/activities/">Activities</a>
+      <a id="activities-a" href="/activities/">activities</a>
   </span> 
 
   <span>
-      <a id="logout-a" href="/logout/">Logout</a>
+      <a id="logout-a" href="/logout/">logout</a>
   </span>
 </div>
