Display for each activity number of errors that occured

--- a/static/activities/styles/activities.css
+++ b/static/activities/styles/activities.css
@@ -14,3 +14,11 @@
   border-bottom: 1px solid #aaa;
   padding: 10px 0 10px 0;
 }
+.activity-error-number {
+  color: #f00;
+  cursor: pointer;
+}
+.activity-errors {
+  margin-top: 5px;
+  display: none;
+}
