--- a/static/activities/styles/activities.styl
+++ b/static/activities/styles/activities.styl
@@ -1,14 +1,21 @@
 #activity-list
-  margin: 20px 0 20px 0
-  font-size: 13px
+  margin 20px 0 20px 0
+  font-size 13px
   a
-    text-decoration: none
-    font-weight: bold
+    text-decoration none
+    font-weight bold
     color black
   a:hover
-    text-decoration: underline
+    text-decoration underline
 
 .activity-row
-  border-bottom: 1px solid #AAA
-  padding: 10px 0 10px 0
+  border-bottom 1px solid #AAA
+  padding 10px 0 10px 0
 
+.activity-error-number
+  color red
+  cursor pointer
+
+.activity-errors
+  margin-top 5px
+  display none
