--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -13,6 +13,6 @@
   </span> 
 
   <span>
-      <a id="logout-a" href="/logout/">logout</a>
+      <a id="logout-a" href="/logout/">X</a>
   </span>
 </div>
