--- a/templates/news/micropost.html
+++ b/templates/news/micropost.html
@@ -1,3 +1,4 @@
+
 <p>At {{ micropost.date }}, {{ micropost.author }} wrote : </p>
-<p>{{ micropost.content }}</p>
+<p class="micropost-preview-content">{{ micropost.content }}</p>
 
