--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -90,7 +90,7 @@ textarea
 /* Menu */
 
 #menu
-  margin: 10px 0 10px 0
+  margin: 10px 5px 20px 0px
 
 #menu a
   font-weight: bold
@@ -112,6 +112,9 @@ textarea
   cursor: default
   text-decoration: none
   border: none
+
+#logout-a
+  margin-right 10px
 
 h1
   font-weight: bold
@@ -169,101 +172,105 @@ h3
   margin-top: 20%
 
 #platform-user-form
-  margin-top: 100px
-  text-align: center
+  margin-top 100px
+  text-align center
 
 #platform-user-text-field
   border: none
-  font-weight: bold
-  font-size: 60px
-  text-align: center
+  font-weight bold
+  font-size 60px
+  text-align center
 
 #platform-password-text-field
 #login-password-text-field
-  border: none
-  font-weight: bold
-  font-size: 60px
-  text-align: center
+  border none
+  font-weight bold
+  font-size 60px
+  text-align center
 
 
 #profile
-  margin-top: 30px
-  font-size: 18px
+  margin-top 30px
+  font-size 18px
 
-#profile p
-  margin-bottom: 20px
+#profile .app p
+  margin-bottom 20px
 
 #profile input#platform-profile-name
-  font-size: 56px
-  font-weight: bold
+  font-size 56px
+  font-weight bold
 
 #profile input#platform-profile-url
-  width: 80%
+  width 80%
 
 #profile textarea#profile-description
-  width: 100%
-  height: 70%
-  border: 0
-  font-size: 14px
+  width 100%
+  height 70%
+  border 0
+  font-size 14px
 
 #profile input
-  font-size: 18px
-  border: none
-  padding: 0 0 6px 0
+  font-size 18px
+  border none
+  padding 0 0 6px 0
 
 #profile-render
-  margin-top: 20px
+  margin-top 20px
 
 .profile-name
   font-size 32px
-  text-decoration: none
+  text-decoration none
 
 .profile-url 
-  font-size: 10px
-  font-style:italic
+  font-size 10px
+  font-style italic
 
 .profile-description 
-  margin-top: 10px;
+  margin-top 10px;
 
 #logout-a
-  float: right
+  float right
 
 .modified
-  background: #ffffff url('/static/images/modification_marker.png') no-repeat right top
+  background #ffffff url('/static/images/modification_marker.png') no-repeat right top
 
 #contact-url-field
-  font-size: 20px
-  width: 100%
-  margin-top: 2px
-  padding: 5px
-  margin-bottom: 1px
+  font-size 20px
+  width 100%
+  margin-top 2px
+  padding 5px
+  margin-bottom 1px
 
 #contact-post-button
-  float: right
+  float right
 
 #contacts
-  margin-top: 50px
+  margin-top 50px
 
 #user-menu
-  float: right
-  width: 200px
+  float right
+  width 200px
 
 .platform-contact-row
-  margin-bottom: 10px
-  border-bottom: 1px solid #CCC
+  margin-bottom 10px
+  border-bottom 1px solid #CCC
 
 .platform-contact-url
-  padding: 12px 0 18px 0
+  padding 12px 0 18px 0
 
 .platform-contact-row-buttons
-  float: right
-  height: 40px
-  padding: 0
+  float right
+  height 40px
+  padding 0
 
 .tutorial-text
-  padding-bottom: 10px
-  font-size: 18px
+  padding-bottom 10px
+  font-size 18px
 
 h3.tutorial-text
-  font-weight: bold
+  font-weight bold
+
+.preview p
+.preview ul
+  margin-bottom 10px
 
