--- a/templates/core/contact/contact_content.html
+++ b/templates/core/contact/contact_content.html
@@ -16,7 +16,7 @@
   </div>
   <div id="tutorial-contact"></div>
   </div>
-  <div id="news-preview" class="preview"> </div>
+  <div id="contact-preview" class="preview"> </div>
 </div>
 <script type="text/javascript" 
         src="/static/contacts/lib/contacts.js">
