Adding contact is easier + acitivities styling

--- a/static/activities/styles/activities.styl
+++ b/static/activities/styles/activities.styl
@@ -18,3 +18,11 @@
 
 .activity-errors
   margin-top 5px
+
+.activity-error-resend
+  cursor pointer
+  font-weight bold
+
+span.activity-error-resend:hover
+  text-decoration underline
+
