debug + cleaning + add note application

--- a/templates/base_menu_content.html
+++ b/templates/base_menu_content.html
@@ -3,8 +3,11 @@
     <a id="news-a"href="/news/">news</a>
   </span>
   <span>
+      <a id="notes-a" href="/notes/">notes</a>
+  </span> 
+  <span>
     <a id="profile-a" href="/profile/">profile</a>
-</span>
+  </span>
   <span>
       <a id="contact-a" href="/contact/">contacts</a>
   </span>
