Templates refactoring for better app separation

--- a/core/templates/base_menu.html
+++ b/core/templates/base_menu.html
@@ -1,7 +1,7 @@
-{% extends "../templates/base.html" %}
+{% extends "../core/templates/base.html" %}
 
 {% block body %}
-{% include "../templates/base_menu_content.html" %}
+{% include "../core/templates/base_menu_content.html" %}
 <div id="preview">
   {% block preview %}{% end %}
 </div>
