--- a/core/templates/core/profile/profile_content.html
+++ b/core/templates/core/profile/profile_content.html
@@ -5,7 +5,7 @@
   <div id="tutorial-profile"></div>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
   <p>Description:</p>
-  <p><textarea id="profile-description" /></p>
+  <p><textarea id="profile-description"></textarea></p>      
   </div>
   <div id="profile-preview" class="preview">
       This is how your contacts see your profile:
