add a login introduction

--- a/auth/templates/login_content.html
+++ b/auth/templates/login_content.html
@@ -1,5 +1,5 @@
 <div id="login-form">
-  <p id="platform-login-disclaimer"></p>
+  <p id="platform-login-disclaimer">What is your sesame ?</p>
   <p id="platform-user-form">
     <input type="password" id="login-password-text-field"></input>
   </p>
