--- a/auth/templates/password.html
+++ b/auth/templates/password.html
@@ -1,9 +1,9 @@
-{% extends "../templates/base.html" %}
+{% extends "templates/base.html" %}
 
 {% block title %}
 Register
 {% end title %}
 
 {% block body %}
-{% include "../templates/core/password_content.html" %}
+{% include "../auth/templates/password_content.html" %}
 {% end body %}
