--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -166,6 +166,7 @@ h3
   right: 30px
   top: 30px
 
+#platform-login-disclaimer
 #platform-register-disclaimer
   font-weight: bold
   font-size: 38px
