add sync button

--- a/activities/templates/activities_content.html
+++ b/activities/templates/activities_content.html
@@ -9,6 +9,8 @@
                until 
                <input id="activities-from-datepicker" type="text"></input>
              </span>
+             <span> - </span>
+             <a id="activities-sync-button" href="#">sync</a>
            </div>
          <div class="spacer"></div>
          <!-- End tool bar -->
