better module separation and test updates

--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -1,9 +1,9 @@
-{% extends "../core/templates/base.html" %}
+{% extends "../../newebe/core/templates/base.html" %}
 
 {% block title %}
 Login
 {% end title %}
 
 {% block body %}
-{% include "../auth/templates/login_content.html" %}
+{% include "login_content.html" %}
 {% end body %}
