--- a/contacts/templates/contact.html
+++ b/contacts/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "../../newebe/core/templates/base_menu.html" %}
 
 {% block content %}
-  {% include "../../newebe/core/templates/core/contact/contact_content.html" %}
+  {% include "contact_content.html" %}
 {% end %}
 
