--- a/auth/templates/password.html
+++ b/auth/templates/password.html
@@ -1,9 +1,9 @@
-{% extends "templates/base.html" %}
+{% extends "../../newebe/core/templates/base.html" %}
 
 {% block title %}
 Register
 {% end title %}
 
 {% block body %}
-{% include "../auth/templates/password_content.html" %}
+{% include "password_content.html" %}
 {% end body %}
