debug contact render (set right template path)

--- a/contacts/templates/contact_render.html
+++ b/contacts/templates/contact_render.html
@@ -1,3 +1,5 @@
+{% autoescape None %} 
+
 <div class="profile-display">
 <h1  class="profile-name">{{ contact.name }}</h1>
 <p class="profile-url">{{ contact.url }}</p>
