port code to backbone 0.5.3

--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -106,7 +106,7 @@ a:hover {
 }
 body {
   font-family: sans-serif;
-  margin: 10px 0 0 10px;
+  margin: 20px 10px 0 20px;
 }
 #apps {
   width: 100%;
@@ -114,12 +114,13 @@ body {
   background: #fff;
 }
 .app {
-  width: 49%;
+  width: 48%;
   float: left;
 }
 .preview {
-  width: 49%;
+  width: 48%;
   float: right;
+  padding: 0 20px 0 20px;
 }
 div.spacer {
   clear: both;
