--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -47,7 +47,7 @@ a:hover
 
 body
   font-family: sans-serif
-  margin: 10px 0 0 10px
+  margin: 20px 10px 0 20px
 
 #apps
   width: 100%
@@ -55,12 +55,13 @@ body
   background: white
 
 .app
-  width: 49%
+  width: 48%
   float: left
 
 .preview
-  width: 49%
-  float: right
+  width 48%
+  float right
+  padding 0 20px 0 20px
 
 div.spacer
   clear: both
