update test and render templates

--- a/news/templates/micropost.html
+++ b/news/templates/micropost.html
@@ -1,3 +1,4 @@
+{% autoescape None %} 
 
 <p>At {{ micropost.date }}, {{ micropost.author }} wrote : </p>
 <p class="micropost-preview-content">{{ micropost.content }}</p>
